# ai-concierge

./: .cursorrules  .env.example  .gitignore  .pylintrc  CONTRIBUTING.md  GITHUB_ISSUES_4_MESSAGE_FLOW.md  KIND_9901_FORMAT.md  README.md  RESERVATION_FIXES_2025-10-31.md  RESERVATION_IMPLEMENTATION_SUMMARY.md  RESTAURANT_RESPONSE_FORMAT.md  TESTING_RESERVATIONS.md  docker-compose.yml  events.json
.cursor/: settings.json
.github/workflows/: deploy.yml  test.yml
backend/: .env.example  Dockerfile  check_demo_restaurants.py  check_italian_restaurants.py  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  schemas.py
backend/app/api/: chat.py  health.py  search.py
backend/app/core/: config.py  logging.py  redis.py
backend/app/repositories/: __init__.py  listings.py  sellers.py
backend/app/services/: __init__.py  analytics.py  assistant.py  embedding.py  nostr_relay.py
backend/app/utils/: __init__.py  geolocation.py
backend/tests/: test_assistant_context.py  test_demo_mode_filtering.py  test_distance_filtering_prompt.py  test_function_calling.py  test_geolocation.py  test_health.py  test_listings_parser.py  test_nip89_discovery.py  test_reservation_action_schema.py  test_seller_npub_exposed.py  test_user_location_schema.py
docs/: CONTACT_FIELDS_UPDATE.md  RESERVATION_FLOW_PROPOSAL_ANALYSIS.md  RESERVATION_MODIFICATION_FORMAT.md  RESERVATION_REQUEST_FORMAT.md  RESTAURANT_RESPONSE_FORMAT.md  architecture.md  frontend-configuration.md  manual-testing-location.md  manual-testing-reservations.md  nip89-integration.md
docs/restaurants/: client_assistant_instructions.md  concierge_assistant_instructions.md  implementation-status.md  nip89-integration.md  strategy.md
docs/schemas/: README.md  reservation.modification.request.schema.json  reservation.modification.response.schema.json  reservation.request.schema.json  reservation.response.schema.json
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/public/assets/: README.txt
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
infra/: README.md
infra/terraform/: iam.tf  main.tf  outputs.tf  providers.tf  variables.tf
internal/: sample_database.txt
scripts/: load_sample_data.py  render_task_definition.py  validate-modification-schemas.mjs
(+46 files in other folders)
